! icon not showing in header ! prevent overflow of add/mod form with large images

--- a/template/awards.css
+++ b/template/awards.css
@@ -40,7 +40,7 @@
 }
 
 .cat_img_award_add:before {
-	background-image: url(../../images/awards/award_hd.png);
+	background-image: url(../images/awards/award_hd.png);
 }
 
 .secondary_header img.icon {
@@ -115,6 +115,10 @@ dl.settings dt a img.award_icon_help {
 	vertical-align: middle;
 }
 
+#awardsfull, #awardssmall {
+	max-width: 95%;
+}
+
 #award_assigned > div {
 	width: 45%;
 	padding: 0 1.5em;
@@ -122,4 +126,14 @@ dl.settings dt a img.award_icon_help {
 
 #assigngroup > dl.select {
 	columns: 3;
+}
+
+.admin_form_wrapper {
+	background: #222222;
+	box-shadow: 0 -2px 2px rgb(0 0 0 / 10%);
+	border: 1px solid #7C7360;
+	border-radius: 7px;
+	margin: 12px 0 0 0;
+	padding: 8px;
+	overflow: auto;
 }
